# pandas-predicates

./: LICENSE  README.md  pyproject.toml  requirements-dev.txt  setup.cfg
.circleci/: config.yml
tests/: test_predicate.py
